[CHANGE] The chat to use the new system
[CHANGE] Removed /zombiehelp and put it in the F1 menu.
[CHANGE] the way how gravgun punting is done
[CHANGE] You can't shoot unless you see through the sight post (ANTI DM!)
[CHANGE] Weapon animations, they are now standard holstered, unless you see through the sight post
[CHANGE] the way chat colours work, it now works completely different!
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings
[REMOVE] Restriction of /dropweapon. You can now drop any weapon.
[REMOVE] CSE base and other unused swep bases
[REMOVE] The second stunstick swep(There were 2 the same :S)
[REMOVE] Chat prefix, broken and noone ever used it.
[REMOVE] cl_deathnotice.lua, it was a complete file just for ONE thing!
[REMOVE] rp_currencysymbol, Didn't work and noone used it
[REMOVE] The standard look-at-a-player Name and health thing, it's replaced by the RP one
[REMOVE] /rm, Exploit-sensitive and never used
[REMOVE] Apply settings button in SPP menu, it now applies instantly.
[REMOVE] Melon entity, it wasn't doing anything :S
[REMOVE] Several networked variables that were used only serverside
[REMOVE] The weight of shipments, noone ever cared.

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Every door and vehicle controls are put in the reload function of the keys SWEP
[ADD] Re-added the earthquake sound
[ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
[ADD] Cops chief and mayor only option in the Key menu for superadmins
[ADD] A very easy way to add classes! see shared.lua!
[ADD] rp_hungerspeed command: it's the speed of hunger divided by 10( standard = 7)